AC_INIT(bm-font-import,1.0.0)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

PKG_CHECK_MODULES([PACKAGES], [freetype2 >= 9.20 fontconfig >= 2.8.0 libpng >= 1.2])

AC_SUBST(PACKAGES_CFLAGS)
AC_SUBST(PACKAGES_LIBS)

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile)
